[gd_scene load_steps=7 format=3 uid="uid://c8j3vj5nc6g7p"]

[ext_resource type="Script" uid="uid://qbh4jdqopvvw" path="res://boss.gd" id="1_boss"]
[ext_resource type="Texture2D" uid="uid://yqglrrsx7j1f" path="res://art/enemyFlyingAlt_1.png" id="2_sprite1"]
[ext_resource type="Texture2D" uid="uid://bpot8awhdn6ph" path="res://art/enemyFlyingAlt_2.png" id="3_sprite2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sprite1")
}, {
"duration": 1.0,
"texture": ExtResource("3_sprite2")
}],
"loop": true,
"name": &"fly",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 80.025

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 79.0

[node name="Boss" type="RigidBody2D" groups=["boss"]]
collision_mask = 0
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 4
script = ExtResource("1_boss")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 0.5, 1)
rotation = 1.56922
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_1")
animation = &"fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.999969, 31)
rotation = 0.182558
shape = SubResource("CircleShape2D_1")

[node name="BulletDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetector"]
position = Vector2(1, 31)
shape = SubResource("CircleShape2D_2")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -46.0
offset_top = -56.0
offset_right = 47.0
offset_bottom = -44.0
max_value = 10.0
value = 10.0
show_percentage = false

[node name="VisibilityNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 37)
scale = Vector2(4.8, 4.8)

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
